# QReptileIntroduce

./: .gitignore  .gitmodules  CMakeLists.txt  README.en.md  README.md
srcs/libs/ShaderModel/RequestNets/www.121ds.cc/: CMakeLists.txt  RequestNetPlugin.h  www_121ds_cc.json
srcs/libs/ShaderModel/RequestNets/www.121ds.cc/Request/: IRequestNetInterface.cpp  IRequestNetInterface.h  RequestNet.cpp  RequestNet.h
srcs/libs/ShaderModel/plugs/www.121ds.cc/: CMakeLists.txt  RequestNetPlugin.h
srcs/libs/ShaderModel/plugs/www.121ds.cc/NovelInfo/: NovelInfo.cpp  NovelInfo.h
srcs/libs/ShaderModel/plugs/www.121ds.cc/Request/: RequestNet.cpp  RequestNet.h
srcs/libs/ShaderModel/plugs/www.121ds.cc/RequestDefinition/: RequestNetDefinition.cpp  RequestNetDefinition.h
srcs/libs/ShaderModel/plugs/www.121ds.cc/RequestNet/: RequestNet.cpp  RequestNet.h
srcs/libs/ShaderModel/plugs/www.121ds.cc/RequestNetPlugin/: RequestNetPlugin.cpp
srcs/libs/ShaderModel/plugs/www.121ds.cc/auto_generate_files/macro/: cmake_to_c_cpp_header_env.h  cmake_to_c_cpp_header_macro.h
srcs/libs/ShaderModel/plugs/www.121ds.cc/export/: Www.121ds.cc_export.h
srcs/libs/ShaderModel/plugs/www.121ds.cc/instance_function/: NovelNodeXPathInfo.cpp  NovelNodeXPathInfo.h  instance_function.h
srcs/libs/ShaderModel/plugs/www.20xs.org/: CMakeLists.txt
srcs/libs/ShaderModel/plugs/www.20xs.org/Request/: RequestNet.cpp  RequestNet.h
srcs/libs/ShaderModel/plugs/www.20xs.org/RequestNet/: RequestNet.cpp  RequestNet.h
srcs/libs/ShaderModel/plugs/www.20xs.org/RequestNetPlugin/: RequestNetPlugin.cpp
srcs/libs/ShaderModel/plugs/www.20xs.org/instance_function/: NovelNodeXPathInfo.cpp  NovelNodeXPathInfo.h  instance_function.h
srcs/libs/ShaderModel/plugs/www.20xs.org/macro/: cmake_to_c_cpp_header_macro.h
srcs/libs/ShaderModel/plugs/www.2wxsl.com/: CMakeLists.txt
srcs/libs/ShaderModel/plugs/www.2wxsl.com/RequestNet/: RequestNet.cpp  RequestNet.h
srcs/libs/ShaderModel/plugs/www.2wxsl.com/instance_function/: NovelNodeXPathInfo.cpp
srcs/libs/ShaderModel/shaders/NoveInfo/: CMakeLists.txt
srcs/libs/ShaderModel/shaders/NoveInfo/data/: INovelInfo.cpp  INovelInfo.h
srcs/libs/ShaderModel/shaders/NoveInfo/dataStruct/: ArrayStruct.cpp  ArrayStruct.h
srcs/libs/ShaderModel/shaders/NoveInfo/interface/: IRequestNetInterface.cpp  IRequestNetInterface.h  IRequestNetInterfaceExtend.cpp  IRequestNetInterfaceExtend.h
srcs/libs/ShaderModel/shaders/NoveInfo/macro/: cmake_to_c_cpp_header_env.h
srcs/libs/ShaderModel/shaders/NoveInfo/netWork/: Request.cpp  Request.h
srcs/libs/ShaderModel/shaders/NoveInfo/netWork/thread/: RequestThread.cpp  (+2 more)
srcs/libs/ShaderModel/shaders/Plug/: CMakeLists.txt
srcs/libs/ShaderModel/shaders/Plug/dateTime/: DateTime.cpp  DateTime.h
srcs/libs/ShaderModel/shaders/Plug/ioFile/: IOFile.cpp  IOFile.h
srcs/libs/ShaderModel/shaders/Plug/novelBase/: NovelBase.cpp  NovelBase.h
srcs/libs/ShaderModel/shaders/Plug/novelNetJob/: NovelDBJob.cpp  NovelDBJob.h  NovelNetJob.cpp  NovelNetJob.h  NovelTime.cpp  NovelTime.h
srcs/libs/ShaderModel/shaders/Plug/plug/: LoadPlug.cpp  LoadPlug.h
srcs/libs/ShaderModel/shaders/XmlTools/: CMakeLists.txt
srcs/libs/ShaderModel/shaders/XmlTools/export/: XmlTools_export.h
srcs/libs/ShaderModel/shaders/XmlTools/html/: HtmlDoc.cpp  HtmlDoc.h
srcs/libs/ShaderModel/shaders/XmlTools/macro/: cmake_to_c_cpp_header_env.h
srcs/libs/ShaderModel/shaders/XmlTools/nameSpace/: XmlTools.h
srcs/libs/ShaderModel/shaders/XmlTools/refWStr/: RefWStr.cpp  RefWStr.h
srcs/libs/ShaderModel/shaders/XmlTools/wstr/: WStrTools.cpp  WStrTools.h
srcs/projects/QReptileIntroduce/: CMakeLists.txt
srcs/projects/QReptileIntroduce/res/ini/downIni/: types.ini
srcs/projects/QReptileIntroduce/res/ini/progress/: QReptileIntroduce.ini
srcs/projects/QReptileIntroduce/src/codes/: DateTimeThread.cpp  DateTimeThread.h  main.cpp
srcs/projects/QReptileIntroduce/src/core/: Appliction.cpp  Appliction.h
srcs/projects/QReptileIntroduce/src/exception/: Exception.cpp  Exception.h
srcs/projects/QReptileIntroduce/src/file/: FileResult.cpp  FileResult.h  RWFileThread.cpp  RWFileThread.h
srcs/projects/QReptileIntroduce/src/layout/: HLayoutBox.cpp  HLayoutBox.h  HLyaoutBox.cpp  HLyaoutBox.h  VLayoutBox.cpp  VLayoutBox.h
srcs/projects/QReptileIntroduce/src/main/: main.cpp
srcs/projects/QReptileIntroduce/src/menu/: Action.cpp  Action.h  Menu.h
srcs/projects/QReptileIntroduce/src/netWork/: Request.cpp  Request.h  RequestConnect.cpp  RequestConnect.h
srcs/projects/QReptileIntroduce/src/notWork/: Request.cpp  Request.h
srcs/projects/QReptileIntroduce/src/qt/extend/: Button.cpp  EditLine.cpp
srcs/projects/QReptileIntroduce/src/qt/group/: MainWidget.cpp  NovelInfoWidget.cpp  NovelInfoWidget.h  WebUrlInfoWidget.cpp  WebUrlInfoWidget.h
srcs/projects/QReptileIntroduce/src/thread/: DateTimeThread.cpp  DateTimeThread.h  FileThread.cpp  FileThread.h  FileThreadResult.cpp  FileThreadResult.h  RWFileThread.cpp  RWFileThread.h
srcs/projects/QReptileIntroduce/src/ui/: HLyaoutBox.cpp  MainWidget.cpp  MainWidget.h  NovelInfoWidget.cpp  NovelInfoWidget.h
srcs/projects/QReptileIntroduce/src/ui/components/: Button.cpp  Button.h  EditLine.cpp  EditLine.h  WebUrlInfoWidget.cpp  WebUrlInfoWidget.h
srcs/projects/QReptileIntroduce/src/userHread/: DebuRunCode.h  QtMorc.h  UserDefine.h
srcs/projects/QReptileIntroduce/src/userHread/defineMorc/: debug.h  release.h
srcs/projects/QReptileIntroduce/translations/: QReptileIntroduce_en.ts  QReptileIntroduce_zh_CN.ts
srcs/projects/ReptileIntroduce/: CMakeLists.txt
srcs/projects/ReptileIntroduce/res/ini/downIni/: types.ini
srcs/projects/ReptileIntroduce/res/writeFile/: www.121ds.cc.html
srcs/projects/ReptileIntroduce/src/auto_generate_files/macro/: cmake_to_c_cpp_header_env.h
srcs/projects/ReptileIntroduce/src/macro/: cmake_to_c_cpp_header_env.h
srcs/projects/ReptileIntroduce/src/main/: main.cpp
srcs/projects/ReptileIntroduce/src/qt/userHread/: QtMorc.h
srcs/projects/ReptileIntroduce/translations/: ReptileIntroduce_en.ts  ReptileIntroduce_zh_CN.ts
(+269 files in other folders)
